--- a/estilos8.css
+++ b/estilos8.css
@@ -7,7 +7,7 @@
 
 body{
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: #8ce99a;
+	background-color: #5fe76a;
 	line-height: 1.6em;
 }
 main img {
